RecogniseMusic logic now goes into its own activity, sitting across there.

--- a/SonataGlass/AndroidManifest.xml
+++ b/SonataGlass/AndroidManifest.xml
@@ -36,6 +36,13 @@
         </activity>
 
         <activity
+            android:name="com.sat.sonata.RecogniseMusicActivity"
+            android:label="KAVINDU"
+            android:enabled="true">
+        </activity>
+
+
+        <activity
             android:name="com.sat.sonata.TakePictureActivity"
             android:label="TEST"
             android:enabled="true">
