--- a/SonataGlass/AndroidManifest.xml
+++ b/SonataGlass/AndroidManifest.xml
@@ -49,7 +49,7 @@
         </activity>
 
         <service
-            android:name="com.sat.sonata.StopwatchService"
+            android:name="com.sat.sonata.SonataService"
             android:icon="@drawable/ic_lap"
             android:label="@string/app_name"
             android:enabled="true"
