--- a/SonataGlass/AndroidManifest.xml
+++ b/SonataGlass/AndroidManifest.xml
@@ -19,6 +19,7 @@
     android:versionCode="2"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="15" />
